Decorated index, renamed folders and added links for easy access

--- a/index.html
+++ b/index.html
@@ -4,11 +4,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Table de Multiplication</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>My projects</title>
+    <link rel="shortcut icon" href="favicon.png" type="image/png" />
+    <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
-    TEST
-    <script src="script.js"></script>
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
+    <div class="content">
+      <h1>All Projects</h1>
+      <div class="container">
+        <button
+          onclick="location = 'https://dalbir-1.github.io/uni-exercises/calculatrice/'"
+          class="button-29 grid1"
+          role="button"
+        >
+          Calculatrice
+        </button>
+        <button
+          onclick="location = 'https://dalbir-1.github.io/uni-exercises/nombresecret/'"
+          class="button-29 grid2"
+          role="button"
+        >
+          Nombre Secret
+        </button>
+        <button
+          onclick="location = 'https://dalbir-1.github.io/uni-exercises/todolist/'"
+          class="button-29 grid3"
+          role="button"
+        >
+          To-Do Liste
+        </button>
+        <button
+          onclick="location = 'https://dalbir-1.github.io/uni-exercises/wip/'"
+          class="button-29 grid4"
+          role="button"
+        >
+          #WIP
+        </button>
+      </div>
+    </div>
+    <script src="assets/script.js"></script>
   </body>
 </html>
