--- a/nombresecret/index.html
+++ b/nombresecret/index.html
@@ -2,27 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nombre Secret</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
+    <title>Nombre Secret!</title>
   </head>
   <body>
     <header>
-        <button class="again-btn">Again!</button>
-        <p class="range">&ltUn nombre entre 1 and 10&gt</A></p>
-        
-        <hr>
-        <div class="number">?</div>
+      <h1>Nombre Secret!</h1>
+
+      <button class="btn again">Rejouer!</button>
+      <div class="number">?</div>
     </header>
-    <div class="stat">
-        <p class="message">Message</p>
-        <span class="score">Score: 10</span></br>
-        <span class="record">Highest Record:</span></br>
-        <input class="guess-number"type="text"></br>
-        <button class="check-btn">Envoyer!</button>
-    </div>
-    <!-- Script -->
+    <main>
+      <section class="left">
+        <input type="number" class="guess" />
+        <button class="btn check">Check!</button>
+      </section>
+      <section class="right">
+        <p class="message"></p>
+        <p class="label-score">💯 Score: <span class="score">10</span></p>
+        <p class="label-highscore">
+          🥇 Meilieur: <span class="highscore">0</span>
+        </p>
+      </section>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
