--- a/index.html
+++ b/index.html
@@ -9,39 +9,37 @@
     <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
-    <div class="bg"></div>
-    <div class="bg bg2"></div>
-    <div class="bg bg3"></div>
+    <section class="sticky">
+      <div class="bubbles">
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+      </div>
+    </section>
+
     <div class="content">
-      <h1>All Projects</h1>
+      <h1>SERVEUR</h1>
       <div class="container">
         <button
-          onclick="location = 'https://dalbir-1.github.io/uni-exercises/calculatrice/'"
+          onclick="location = 'https://dalbir-1.github.io/uni-exercises/s1/serveur-web'"
           class="button-29 grid1"
           role="button"
         >
-          Calculatrice
+          WEB
         </button>
         <button
-          onclick="location = 'https://dalbir-1.github.io/uni-exercises/nombresecret/'"
+          onclick="location = 'https://dalbir-1.github.io/uni-exercises/application-web/'"
           class="button-29 grid2"
           role="button"
         >
-          Nombre Secret
-        </button>
-        <button
-          onclick="location = 'https://dalbir-1.github.io/uni-exercises/todolist/'"
-          class="button-29 grid3"
-          role="button"
-        >
-          To-Do Liste
-        </button>
-        <button
-          onclick="location = 'https://dalbir-1.github.io/uni-exercises/wip/'"
-          class="button-29 grid4"
-          role="button"
-        >
-          #WIP
+          APPLICATION
         </button>
       </div>
     </div>
