--- a/s1/application-web/index.html
+++ b/s1/application-web/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My projects</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/png" />
+    <title>Application-WEB</title>
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/png" />
     <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
@@ -13,7 +13,7 @@
     <div class="bg bg2"></div>
     <div class="bg bg3"></div>
     <div class="content">
-      <h1>All Projects</h1>
+      <h1>Applications-WEB</h1>
       <div class="container">
         <button
           onclick="location = 'https://dalbir-1.github.io/uni-exercises/s1/application-web/calculatrice'"
