--- a/s1/serveur-web/index.html
+++ b/s1/serveur-web/index.html
@@ -4,46 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My projects</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/png" />
+    <title>Serveur-WEB</title>
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/png" />
     <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
-    <div class="bg"></div>
-    <div class="bg bg2"></div>
-    <div class="bg bg3"></div>
-    <div class="content">
-      <h1>All Projects</h1>
-      <div class="container">
-        <button
-          onclick="location = 'https://dalbir-1.github.io/uni-exercises/calculatrice/'"
-          class="button-29 grid1"
-          role="button"
-        >
-          Calculatrice
-        </button>
-        <button
-          onclick="location = 'https://dalbir-1.github.io/uni-exercises/nombresecret/'"
-          class="button-29 grid2"
-          role="button"
-        >
-          Nombre Secret
-        </button>
-        <button
-          onclick="location = 'https://dalbir-1.github.io/uni-exercises/todolist/'"
-          class="button-29 grid3"
-          role="button"
-        >
-          To-Do Liste
-        </button>
-        <button
-          onclick="location = 'https://dalbir-1.github.io/uni-exercises/wip/'"
-          class="button-29 grid4"
-          role="button"
-        >
-          #WIP
-        </button>
-      </div>
+    <div class="container">
+      <button
+        onclick="location = 'https://dalbir-1.github.io/uni-exercises/s1/serveur-web/date.js'"
+        class="button-86 grid1"
+        role="button"
+      >
+        date.js
+      </button>
+      <button
+        onclick="location = 'https://dalbir-1.github.io/uni-exercises/s1/serveur-web/des.js'"
+        class="button-86 grid2"
+        role="button"
+      >
+        des.js
+      </button>
+      <button
+        onclick="location = 'https://dalbir-1.github.io/uni-exercises/s1/serveur-web/statique.js'"
+        class="button-86 grid3"
+        role="button"
+      >
+        statique.js
+      </button>
     </div>
     <script src="assets/script.js"></script>
   </body>
