--- a/s1/serveur-web/index.html
+++ b/s1/serveur-web/index.html
@@ -7,31 +7,56 @@
     <title>Serveur-WEB</title>
     <link rel="shortcut icon" href="assets/favicon.png" type="image/png" />
     <link rel="stylesheet" href="assets/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"
+    />
   </head>
   <body>
-    <div class="container">
-      <button
-        onclick="location = 'https://dalbir-1.github.io/uni-exercises/s1/serveur-web/date.js'"
-        class="button-86 grid1"
-        role="button"
-      >
-        date.js
-      </button>
-      <button
-        onclick="location = 'https://dalbir-1.github.io/uni-exercises/s1/serveur-web/des.js'"
-        class="button-86 grid2"
-        role="button"
-      >
-        des.js
-      </button>
-      <button
-        onclick="location = 'https://dalbir-1.github.io/uni-exercises/s1/serveur-web/statique.js'"
-        class="button-86 grid3"
-        role="button"
-      >
-        statique.js
-      </button>
-    </div>
+    <head>
+      <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400"
+        rel="stylesheet"
+      />
+    </head>
+    <body>
+      <div class="container">
+        <div class="card card1">
+          <h3 class="title">date.js</h3>
+          <div class="bar">
+            <div class="emptybar"></div>
+            <div class="filledbar"></div>
+          </div>
+          <div class="circle">
+            <img src="assets/date.gif" alt="">
+          </div>
+        </div>
+        <div class="card card2">
+          <h3 class="title">des.js</h3>
+          <div class="bar">
+            <div class="emptybar"></div>
+            <div class="filledbar"></div>
+          </div>
+          <div class="circle">
+            <img src="assets/des.gif" alt="">
+          </div>
+        </div>
+        <div class="card card3">
+          <h3 class="title">statique.js</h3>
+          <div class="bar">
+            <div class="emptybar"></div>
+            <div class="filledbar"></div>
+          </div>
+          <div class="circle">
+            <img src="assets/html.png" alt="">
+
+          </div>
+        </div>
+       
+          </div>
+        </div>
+      </div>
+    </body>
     <script src="assets/script.js"></script>
   </body>
 </html>
