--- a/s1/serveur-web/statique.js/index.html
+++ b/s1/serveur-web/statique.js/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <h1>LMAO</h1>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Navigation Animale</title>
+    <style>
+        h1 {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
+</head>
+<body>
+
+<h1> Liste des Animaux </h1> 
+
+    <ul> 
+        <li><a href="chien.html">Chien</li>
+        <li><a href="chat.html">Chat</li> 
+        <li><a href="poisson.html">Poisson</li>
+    </ul>
+</body>
 </html>
