Updated links and names

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
       <h1>SERVEUR</h1>
       <div class="container">
         <button
-          onclick="location = 'https://dalbir-1.github.io/uni-exercises/s1/serveur-web'"
+          onclick="location = 's1/serveur-web'"
           class="button-29 grid1"
           role="button"
         >
           WEB
         </button>
         <button
-          onclick="location = 'https://dalbir-1.github.io/uni-exercises/s1/application-web/'"
+          onclick="location = 's1/application-web/'"
           class="button-29 grid2"
           role="button"
         >
