--- a/s1/application-web/index.html
+++ b/s1/application-web/index.html
@@ -16,28 +16,28 @@
       <h1>Applications-WEB</h1>
       <div class="container">
         <button
-          onclick="location = 'https://dalbir-1.github.io/uni-exercises/s1/application-web/calculatrice'"
+          onclick="location = 'calculatrice/'"
           class="button-29 grid1"
           role="button"
         >
           Calculatrice
         </button>
         <button
-          onclick="location = 'https://dalbir-1.github.io/uni-exercises/s1/application-web/nombresecret/'"
+          onclick="location = 'nombresecret/'"
           class="button-29 grid2"
           role="button"
         >
           Nombre Secret
         </button>
         <button
-          onclick="location = 'https://dalbir-1.github.io/uni-exercises/s1/application-web/todo2'"
+          onclick="location = 'todo2/'"
           class="button-29 grid3"
           role="button"
         >
           To-Do Liste
         </button>
         <button
-          onclick="location = 'https://dalbir-1.github.io/uni-exercises/s1/application-web/tabledemultiplication'"
+          onclick="location = 'tabledemultiplication/'"
           class="button-29 grid4"
           role="button"
         >
