added semester 1 project

--- a/s1/serveur-web/des.js/index.html
+++ b/s1/serveur-web/des.js/index.html
@@ -22,7 +22,7 @@
       function randImg() {
         let size = images.length;
         let x = Math.floor(size * Math.random());
-        document.getElementById("image").src = images[x];
+        document.querySelector("#image").src = images[x];
       }
       randImg();
     </script>
