--- a/s1/serveur-web/date.js/index.html
+++ b/s1/serveur-web/date.js/index.html
@@ -25,7 +25,7 @@
       day = date.getDate();
       month = date.getMonth() + 1;
       year = date.getFullYear();
-      document.getElementById("current_date").innerHTML =
+      document.querySelector("#current_date").innerHTML =
         day + "/" + month + "/" + year;
     </script>
   </body>
